cg_cfg/OpenSSL/7f0a8dc/bug_trace/traces/bug_119.txt
/gpfs/automountdir/r92gpfs02/zhengyu/work/ai4code/benchmarks/openssl/src/crypto/rc2/rc2cfb64.c:62: error: DEAD_STORE
  The value written to &iv (type unsigned char*) is never used.
Showing all 1 steps of the trace


/gpfs/automountdir/r92gpfs02/zhengyu/work/ai4code/benchmarks/openssl/src/crypto/rc2/rc2cfb64.c:62:17: Write of unused value
60.                   l2c(t, iv);
61.                   t = ti[1];
62.                   l2c(t, iv);
                      ^
63.                   iv = (unsigned char *)ivec;
64.               }
